--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.TestRegisFireBase">
+        <activity android:name=".MainActivity"></activity>
+        <activity android:name=".PostActivity" />
         <activity
             android:name=".LoginActivity"
             android:screenOrientation="portrait" />
