--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,4 +48,5 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.12.0'
     implementation 'com.theartofdev.edmodo:android-image-cropper:2.7.0'
     implementation 'com.rengwuxian.materialedittext:library:2.1.4'
+    implementation 'com.airbnb.android:lottie:3.4.1'
 }
